// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Item basic render snapshoot 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        1 EUR
      </span>
      <span>
        1 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    
  </div>
</div>
`;

exports[`Item Item render snapshoot with name and avgPriceAmazon 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        1 EUR
      </span>
      <span>
        4.2 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    
  </div>
</div>
`;

exports[`Item Item render snapshoot with name and avgPriceCarethy 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        5.2 EUR
      </span>
      <span>
        1 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    
  </div>
</div>
`;

exports[`Item Item render snapshoot with name and date 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        1 EUR
      </span>
      <span>
        1 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    01/01/2001
  </div>
</div>
`;

exports[`Item Item render snapshoot with name, avgPriceCarethy and avgPriceAmazon 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        5.2 EUR
      </span>
      <span>
        4.2 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    
  </div>
</div>
`;

exports[`Item Item render snapshoot with name, date and avgPriceAmazon 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        1 EUR
      </span>
      <span>
        4.2 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    01/01/2001
  </div>
</div>
`;

exports[`Item Item render snapshoot with name, date and avgPriceCarethy 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        5.2 EUR
      </span>
      <span>
        1 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    01/01/2001
  </div>
</div>
`;

exports[`Item Item render snapshoot with name, date, avgPriceCarethy and avgPriceAmazon 1`] = `
<div
  className="Itemstyles__ItemContainer-sc-18euzxw-0 joFNen"
>
  <div
    className="Itemstyles__IteamHeader-sc-18euzxw-1 higtFY"
  >
    <span>
      Shalion
    </span>
    <div
      className="Itemstyles__AvgColumn-sc-18euzxw-2 cLRHqK"
    >
      <span>
        5.2 EUR
      </span>
      <span>
        4.2 EUR
      </span>
    </div>
  </div>
  <div
    className="Itemstyles__Date-sc-18euzxw-3 bSaUZi"
  >
    01/01/2001
  </div>
</div>
`;
